--- a/Shnoll Histogram Tool.ipynb
+++ b/Shnoll Histogram Tool.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dr. Simon Schnoll 'Cosmosphysical' Histogram  Tool"
+    "# Dr. Simon Shnoll 'Cosmosphysical' Histogram  Tool"
    ]
   },
   {
