--- a/Shnoll Histogram Tool.ipynb
+++ b/Shnoll Histogram Tool.ipynb
@@ -4,17 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dr. Simon Shnoll 'Cosmosphysical' Histogram  Tool"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Dr. Simon Shnoll 'Cosmosphysical' Histogram  Tool\n",
+    "\n",
     "This tool implements the data analysis steps taken in [Cosmophysical Factors in Stochastic Processes](http://shnoll.ptep-online.com/publications.html).\n",
     "\n",
     "Full reference:<br>\n",
-    "Shnoll S. E. Cosmophysical Factors in Stochastic Processes. American Research Press, Rehoboth (NM), 2012\n"
+    "Shnoll S. E. Cosmophysical Factors in Stochastic Processes. American Research Press, Rehoboth (NM), 2012"
    ]
   },
   {
