--- a/README
+++ b/README
@@ -1,4 +1,8 @@
 This tool implements the data analysis steps taken in Cosmophysical Factors in Stochastic Processes.
 
+TODO:
+-Data sanitizer
+
 Full reference:
 Shnoll S. E. Cosmophysical Factors in Stochastic Processes. American Research Press, Rehoboth (NM), 2012
+
